Fix offline bar making page overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -106,7 +106,7 @@ footer{
 }
 
 .offline{
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
   background-color: rgba(255, 255, 170, .5);
   color: var(--color-text-headings);
